kustomization/overlays/s3/service-s3.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-tool-s3
  name: image-tool-s3
spec:
  ports:
  - name: image-tool-s3
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: image-tool-s3
  type: LoadBalancer
status:
  loadBalancer: {}
