kustomization/overlays/s3/route-s3.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool-s3
  name: image-tool-s3
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool-s3
    weight: null
